Added Notification Bar

--- a/JetSetRadioLive/app/src/main/res/values/colors.xml
+++ b/JetSetRadioLive/app/src/main/res/values/colors.xml
@@ -3,4 +3,25 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="transparent_black">#aa000000</color>
+
+    <!-- selected tab text -->
+    <color name="selected_tabtext">#bb000000</color>
+
+    <!-- non selected tab text -->
+    <color name="unselected_tabtext">#77000000</color>
+    <color name="shuffle_grey">#ffdedede</color>
+    <color name="background_grey">#ffdedede</color>
+    <!--JSR COLORS -->
+    <color name="JSR_Light">#7BBB5D</color>
+    <color name="JSR_Dark">#285540</color>
+    <color name="JSR_Accent">#E3E90B</color>
+    <!-- Transparent -->
+    <color name="transparent">#00000000</color>
+
+    <!-- Black -->
+    <color name="black">#ff000000</color>
+
+    <!-- White -->
+    <color name="white">#ffffffff</color>
 </resources>
