--- a/JetSetRadioLive/app/src/main/res/layout/status_bar.xml
+++ b/JetSetRadioLive/app/src/main/res/layout/status_bar.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:background="@color/JSR_Light">
 
 
     <ImageView
