--- a/JetSetRadioLive/app/src/main/res/values/colors.xml
+++ b/JetSetRadioLive/app/src/main/res/values/colors.xml
@@ -1,27 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="transparent_black">#aa000000</color>
-
-    <!-- selected tab text -->
-    <color name="selected_tabtext">#bb000000</color>
-
-    <!-- non selected tab text -->
-    <color name="unselected_tabtext">#77000000</color>
-    <color name="shuffle_grey">#ffdedede</color>
-    <color name="background_grey">#ffdedede</color>
-    <!--JSR COLORS -->
-    <color name="JSR_Light">#7BBB5D</color>
-    <color name="JSR_Dark">#285540</color>
-    <color name="JSR_Accent">#E3E90B</color>
-    <!-- Transparent -->
-    <color name="transparent">#00000000</color>
-
-    <!-- Black -->
-    <color name="black">#ff000000</color>
-
-    <!-- White -->
-    <color name="white">#ffffffff</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="white">#ffffff</color>
+    <color name="grey_200">#d1d1d1</color>
 </resources>
